<resources>
    <string name="app_name">LuxeVista</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="bookings">Bookings</string>
    <string name="attractions">Attractions</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="please_login_to_luxevista">Please login to LuxeVista.</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="luxevista_resort">LuxeVista Resort</string>
    <string name="luxury_at_your_fingertips">Luxury at your fingertips</string>
    <string name="register">Register</string>
    <string name="please_register_to_login">Please register to login.</string>
    <string name="username">Username</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="deluxe_suite">Deluxe Suite</string>
    <string name="suite">Suite</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="select_date">Select date</string>
    <string name="total_price">Total Price:</string>
    <string name="book_now">Book Now</string>
    <string name="description">Description</string>
    <string name="book_your_service">Book Your Service</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select time</string>
    <string name="local_attractions">Local Attractions</string>
    <string name="discover_exciting_places_near_our_resort">Discover exciting places near our resort</string>
    <string name="my_bookings">My Bookings</string>
    <string name="manage_your_room_and_service_reservations">Manage your room and service reservations</string>
    <string name="you_have_no_bookings_yet">You have no bookings yet</string>
    <string name="welcome_to_luxevista_resort">Welcome to LuxeVista Resort</string>
    <string name="explore_our_luxury_accommodations_and_services">Explore our luxury accommodations and services</string>
    <string name="our_rooms">Our Rooms</string>
    <string name="my_profile">My Profile</string>
    <string name="email_example_com">email@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="our_services">Our Services</string>
    <string name="explore_our_exclusive_services_and_amenities">Explore our exclusive services and amenities</string>
    <string name="recommended">Recommended</string>
    <string name="view_details">View Details</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="logo_image">logo_image</string>
    <string name="ocean_view">Ocean View</string>
    <string name="room_name">Room Name</string>
    <string name="room_type">Type</string>
    <string name="room_price">$000 / night</string>
    <string name="room_image">Room image preview</string>
    <string name="_000_night">$000 / night</string>
    <string name="type">Type</string>
    <string name="max_occupnacy">No Of Guets\n</string>
    <string name="book_from_book_to">book from - book to</string>
    <string name="lkrprice">LKRprice</string>
    <string name="get_started">Get Started</string>
    <string name="price_up_to_1000">Price</string>
    <string name="search_rooms">Search rooms...</string>
    <string name="todo">TODO</string>
    <string name="service_management_coming_soon">Service management coming soon...</string>

</resources>
